# VectoraServer

./: LICENSE  README.md
.github/: vectora-roadmap.yml
.github/scripts/: roadmap_github_helpers.py  roadmap_to_project.py
.github/workflows/: project-automation.yml
Vectora/: CMakeLists.txt  appicon.rc  build.bat  build.sh
Vectora/.github/: copilot-instructions.md
Vectora/include/network/: NetworkServer.h
Vectora/include/protocol/: ClientState.h  PacketHandler.h
Vectora/include/world/: AnvilRegion.h  BlockStateParser.h  Chunk.h  ChunkParser.h  ChunkSerializer.h  NBT.h  World.h  ZlibUtil.h
Vectora/src/: main.cpp
Vectora/src/network/: NetworkServer.cpp
Vectora/src/protocol/: ClientState.cpp  PacketHandler.cpp
Vectora/src/world/: World.cpp
Vectora/src/world/anvil/: AnvilRegion.cpp  BlockStateParser.cpp  ChunkParser.cpp  ChunkSerializer.cpp  NBT.cpp  ZlibUtil.cpp
